# neurocode

./: LICENSE  Makefile  README.md  codecov.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cd.yml  ci.yml  tests.yml  unittests.yml
docs/: README.md
docs/images/: README.md
neurocode/: __init__.py
neurocode/datasets/: __init__.py  base.py  recording.py  simulated.py  utils.py
neurocode/datautil/: __init__.py  transforms.py  visualization.py
neurocode/models/: __init__.py  blanco.py  contrastive.py  cpc.py  resnet.py  simclr.py  stagernet.py  utils.py
neurocode/samplers/: __init__.py  base.py  contrastive_view.py  recording_relative_positioning.py  recording_simclr.py  relative_positioning.py  scalogram_simclr.py  signal_simclr.py  temporal_shuffling.py
neurocode/training/: simclr.py
scripts/: cc.ps1  cc.sh  rc.sh
tests/: __init__.py  test_datasets.py  test_samplers.py
