[tool.poetry]
name = "neurocode"
version = "1.0.0"
description = "🧠 EEG/MEG self-supervised learning toolbox."
authors = [
    "Wilhelm Ågren <wilhelmagren98@gmail.com>"
]
license = "MIT"
readme = "README.md"

packages = [ {include = "neurocode" } ]
homepage = "https://github.com/neurocode-ai/neurocode"
repository = "https://github.com/neurocode-ai/neurocode"

keywords = [
    "deep-learning",
    "meg",
    "eeg",
    "self-supervised-learning",
    "simclr",
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/neurocode-ai/neurocode"
"Bug tracker" = "https://github.com/neurocode-ai/neurocode/issues"


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.3"
numpy = "^1.26.2"
mne = "^1.5.1"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"
pillow = "^10.1.0"
umap-learn = "^0.5.0"
torch = { version = "2.1.1+cpu", source = "torch-cpu" }
torchvision = { version = "0.16.1+cpu", source = "torch-cpu" }

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.6"
pyclean = "^2.7.6"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"


[tool.ruff]
line-length = 89
ignore = [
    "E401", # unused imports
    "E501", # line too long
    "F405", # may be undefined, or defined from star imports
]


[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
